# Mycelia

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md
.claude/: launch.json
.github/workflows/: ci.yml
configs/training/: llama-70b-pipeline.yaml  llama-8b-lora.yaml
crates/mycelia-cell/: Cargo.toml
crates/mycelia-cell/src/: client.rs  compress.rs  diloco.rs  lib.rs  main.rs  transport.rs
crates/mycelia-sp1-guest/: Cargo.toml
daemon/: README.md  mycelia-daemon.mjs  p2p-relay.mjs  training-cell.mjs  worker.mjs
daemon/service/: com.mycelia.daemon.plist  install.sh  mycelia-daemon.service
docs/: ACCEPTANCE.md  ARCHITECTURE.md  AURORA_DSQL_CONNECT.md  AWS_ONBOARDING.md  DEMO.md  DEMO_4_MINUTE_SCRIPT.md  DEVPOST.md  ML_LAYER.md  MULTI_REGION.md  POLICY.md  TRAINING_STACK.md  TRANSPORT_LAYER.md  ZK_VERIFICATION.md
docs/adr/: 001-diloco-outer-optimizer.md  002-webrtc-pipeline-transport.md  003-sp1-training-attestation.md
examples/: pipeline_stage_worker.py  train_worker.py  train_worker_pytorch.py
frontend/: .env.example  .gitignore  README.md  eslint.config.mjs  next.config.mjs  package.json  pnpm-lock.yaml  vitest.config.mts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: earnings-calculator.tsx  hero.tsx  how-it-works.tsx  mycelium-background.tsx  mycelium-mark.tsx  site-footer.tsx  site-header.tsx  stats-band.tsx  workloads.tsx
frontend/hooks/: use-count-up.ts  use-node-telemetry.ts
frontend/lib/: api-stub.ts  (+34 more)
schemas/: cell-topology.v1.json  training-job.v1.json
scripts/: demo-training-mesh.sh  deploy-coordinator.sh
(+168 files in other folders)
